# agentenv

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  install.sh  justfile  uninstall.sh
crates/agentenv/: Cargo.toml  README.md
crates/agentenv-approvals/: Cargo.toml  README.md
crates/agentenv-approvals/src/: config.rs  coordinator.rs  events.rs  lib.rs  local_store.rs  model.rs  policy.rs  signing.rs  slack.rs  store.rs  webhook.rs
crates/agentenv-core/: Cargo.toml  README.md
crates/agentenv-core/src/: admission.rs  agent_common.rs  blueprint.rs  context_common.rs  digest.rs  driver.rs  driver_artifact.rs  driver_catalog.rs  egress_proxy.rs  env.rs  error.rs  eval.rs  hardening.rs  inference.rs  lib.rs  lifecycle.rs  lockfile.rs  portable_lockfile.rs  registry.rs  runtime.rs  sessions.rs  skills.rs  snapshot.rs
crates/agentenv-core/src/bundle/: mod.rs  model.rs  render.rs  writer.rs
crates/agentenv-core/src/security/: dns_policy.rs  mod.rs  ssrf.rs
crates/agentenv-core/src/skills/: attestation.rs  cache.rs  ci.rs  config.rs  digest.rs  error.rs  index.rs  manifest.rs  mod.rs  registry.rs  registry_filesystem.rs  registry_git.rs  registry_http.rs  registry_oci.rs  self_test.rs  service.rs  signature.rs  store.rs
crates/agentenv-core/tests/: blueprint_ssrf.rs  bundle.rs  dns_policy.rs  driver_artifact.rs  eval_suite.rs  freeze_determinism.rs  hardening_lint.rs  lockfile_security.rs  portable_lockfile.rs  reference_blueprints.rs  roundtrip.rs  runtime_freeze.rs  skill_propose.rs  skills.rs  skills_cache.rs  skills_ci.rs  skills_self_test.rs  ssrf_validator.rs  verify_failures.rs
crates/agentenv-core/tests/fixtures/: invalid-semver.yaml  lockfile-with-secret.yaml  missing-digest.yaml  unknown-driver.yaml
crates/agentenv-credstore/: Cargo.toml  README.md
crates/agentenv-credstore/src/: lib.rs
crates/agentenv-credstore/tests/: public_api.rs
crates/agentenv-events/: Cargo.toml  README.md
crates/agentenv-events/src/: activity.rs  audit.rs  dispatcher.rs  genai.rs  lib.rs  local_ops.rs  metrics.rs  otel.rs  redaction.rs  sink.rs  store.rs  trace.rs  webhook.rs
crates/agentenv-events/tests/: trace_query.rs
crates/agentenv-mcp/: Cargo.toml  README.md
crates/agentenv-mcp/src/: guard.rs  lib.rs
crates/agentenv-plugin/: Cargo.toml  README.md
crates/agentenv-plugin/src/: agent.rs  context.rs  jsonrpc.rs  lib.rs
crates/agentenv-policy/: Cargo.toml  README.md
crates/agentenv-policy/hardening/: baseline.yaml  open.yaml  strict.yaml
crates/agentenv-policy/presets/: builtin.yaml
crates/agentenv-policy/src/: engine.rs  error.rs  hardening.rs  lib.rs  model.rs  presets.rs  provenance.rs
crates/agentenv-policy/src/translate/: docker.rs  mod.rs  openshell.rs
crates/agentenv-policy/tests/: compose_policy.rs  hardening_profiles.rs  provenance_policy.rs  translate_openshell.rs
crates/agentenv-policy/tests/golden/: openshell_balanced_default.yaml  openshell_balanced_github_readwrite.yaml  openshell_supported_subset.yaml
crates/agentenv-proto/: Cargo.toml  README.md  build.rs
crates/agentenv-proto/schema/: activity-event-params.json  agent-health-check-probe.json  agent-spec.json  apply-policy-params.json  apply-policy-result.json  approval-decision-params.json  approval-requested-params.json  attach-session-params.json  capabilities.json  connect-params.json  context-handle-request.json  context-handle.json  context-spec.json  context-status.json  copy-in-params.json  copy-out-params.json  create-session-params.json  credential-requirements-params.json  credential-requirements-result.json  destroy-params.json  dns-policy.json  driver-activity-event-params.json  empty-result.json  endpoint-in-sandbox-result.json  event-log-params.json  exec-params.json  exec-result.json  fork-from-snapshot-params.json  fork-spec.json  health-check-params.json  health-check-result.json  inference-handle-request.json  inference-handle.json  inference-spec.json  initialize-params.json  initialize-result.json  install-steps-result.json  kill-session-params.json  list-sessions-params.json  list-sessions-result.json  (+24 more)
crates/agentenv-proto/src/: lib.rs  schema_version.rs  types.rs
crates/agentenv-proto/tests/: credential_requirement.rs  policy_schema.rs
crates/agentenv/src/: builtin_factory.rs  bundle_cli.rs  credentials_runtime.rs  eval_cli.rs  main.rs  mcp_guard_cli.rs  proxy_cli.rs  render.rs  skills_cli.rs  skills_propose_cli.rs  term_backend.rs
crates/agentenv/tests/: cli_behavior.rs  credentials_cli.rs
crates/drivers/agent-codex/: Cargo.toml  README.md
crates/drivers/context-filesystem/: Cargo.toml  README.md
crates/drivers/context-mcp-generic/: Cargo.toml  README.md
crates/drivers/context-none/: Cargo.toml  README.md
crates/drivers/inference-anthropic/: Cargo.toml  README.md
crates/drivers/inference-ollama/: Cargo.toml  README.md
crates/drivers/inference-openai/: Cargo.toml  README.md
crates/drivers/inference-passthrough/: Cargo.toml  README.md
crates/drivers/sandbox-microvm/: Cargo.toml  README.md
crates/drivers/sandbox-openshell/: Cargo.toml  README.md
crates/drivers/sandbox-remote-ssh/: Cargo.toml  README.md
crates/tui/: Cargo.toml  README.md
crates/tui/src/: app.rs  backend.rs  command.rs  lib.rs  model.rs  render.rs  terminal.rs  theme.rs
external-drivers/agent-hermes-py/: README.md  manifest.json.in  pyproject.toml
external-drivers/agent-hermes-py/scripts/: build-bundle.sh  install-driver.sh  run-tests.sh
external-drivers/agent-hermes-py/tests/: test_docs.py  test_driver_methods.py  test_install_smoke.py  test_jsonrpc.py  test_packaging_files.py  test_subprocess_protocol.py
external-drivers/context-nexus-py/: README.md  manifest.json.in  pyproject.toml
external-drivers/context-nexus-py/scripts/: build-bundle.sh  install-driver.sh
external-drivers/context-nexus-py/tests/: test_driver_methods.py  test_jsonrpc.py
tests/driver-conformance/: Cargo.toml
tests/driver-conformance/src/: lib.rs  main.rs
tests/driver-conformance/tests/: mock_driver.rs
(+145 files in other folders)
