[workspace]
resolver = "2"
members = [
    "crates/agentenv",
    "crates/agentenv-core",
    "crates/agentenv-proto",
    "crates/agentenv-policy",
    "crates/agentenv-credstore",
    "crates/agentenv-approvals",
    "crates/agentenv-events",
    "crates/agentenv-mcp",
    "crates/agentenv-plugin",
    "crates/tui",
    "crates/drivers/sandbox-openshell",
    "crates/drivers/sandbox-remote-ssh",
    "crates/drivers/sandbox-microvm",
    "crates/drivers/agent-claude",
    "crates/drivers/agent-codex",
    "crates/drivers/agent-openclaw",
    "crates/drivers/context-mcp-generic",
    "crates/drivers/context-filesystem",
    "crates/drivers/context-none",
    "crates/drivers/inference-passthrough",
    "crates/drivers/inference-openai",
    "crates/drivers/inference-anthropic",
    "crates/drivers/inference-ollama",
    "tests/driver-conformance",
    "tests/blueprint-integration",
]

[workspace.package]
version = "0.0.1-alpha0"
edition = "2021"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/windoliver/agentenv"
homepage = "https://github.com/windoliver/agentenv"
authors = ["agentenv contributors"]

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Errors / tracing
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
schemars = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }

# CLI / TUI
clap = { version = "=4.5.17", features = ["derive", "env", "wrap_help"] }
indicatif = "0.17"
console = "0.15"
ratatui = "0.28"
crossterm = "0.28"

# Crypto / signing
sha2 = "0.10"
ed25519-dalek = "2"
hex = "0.4"
hmac = "0.12"
rand_core = "0.6"

# HTTP / networking
bytes = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
reqwest = { version = "=0.11.27", default-features = false, features = ["rustls-tls"] }
ipnet = "2"
url = "2"
opentelemetry = { version = "0.31.0", default-features = false }
opentelemetry_sdk = { version = "0.31.0", default-features = false }
opentelemetry-otlp = { version = "0.31.1", default-features = false }

# Keyring / credential store
keyring = "2"

# Misc
dirs = "5"
uuid = { version = "1", features = ["v4", "v7"] }
once_cell = "1"
libc = "0.2"
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }
humantime = "2"
humantime-serde = "1"
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
