[package]
name = "agentenv-approvals"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
description = "Approval flow scaffolding for agentenv"

[dependencies]
agentenv-events = { path = "../agentenv-events" }
agentenv-proto = { path = "../agentenv-proto" }
async-trait.workspace = true
hex.workspace = true
hmac.workspace = true
humantime.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["formatting", "parsing"] }
tokio.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "=3.16.0"
