[package]
name = "agentenv-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
description = "Core abstractions and orchestration scaffolding for agentenv"

[dependencies]
agentenv-proto = { path = "../agentenv-proto" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
schemars.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
semver = "1"
