[package]
name = "agentenv-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
description = "Core abstractions and orchestration scaffolding for agentenv"

[dependencies]
agentenv-approvals = { path = "../agentenv-approvals" }
agentenv-events = { path = "../agentenv-events" }
agentenv-proto = { path = "../agentenv-proto" }
agentenv-policy = { path = "../agentenv-policy" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
schemars.workspace = true
thiserror.workspace = true
ipnet.workspace = true
url.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
rand_core.workspace = true
dirs.workspace = true
time = { workspace = true, features = ["formatting"] }
tokio = { workspace = true }
uuid.workspace = true
semver = "1"
