[package]
name = "agentenv-events"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
description = "Event stream scaffolding for agentenv"

[dependencies]
agentenv-proto = { path = "../agentenv-proto" }
async-trait.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
rand_core = { workspace = true, features = ["getrandom"] }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["formatting"] }
tokio.workspace = true
url.workspace = true

[dev-dependencies]
tempfile = "=3.16.0"
