[package]
name = "agentenv-events"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
description = "Event stream scaffolding for agentenv"

[features]
default = []
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]

[dependencies]
agentenv-proto = { path = "../agentenv-proto" }
async-trait.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
opentelemetry = { workspace = true, optional = true, features = ["logs", "trace"] }
opentelemetry_sdk = { workspace = true, optional = true, features = ["logs", "trace"] }
opentelemetry-otlp = { workspace = true, optional = true, features = ["grpc-tonic", "logs", "trace"] }
rand_core = { workspace = true, features = ["getrandom"] }
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["formatting"] }
tokio.workspace = true
url.workspace = true

[dev-dependencies]
tempfile = "=3.16.0"
