[package]
name = "agentenv-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
description = "Plugin host scaffolding for agentenv"

[dependencies]
agentenv-core = { path = "../agentenv-core" }
agentenv-events = { path = "../agentenv-events" }
agentenv-proto = { path = "../agentenv-proto" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
semver = "1"
thiserror.workspace = true
tokio.workspace = true
