[package]
name = "agentenv"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
description = "Declarative environment manager for AI coding agents"

[dependencies]
agentenv-credstore = { path = "../agentenv-credstore" }
anyhow.workspace = true
clap.workspace = true
rpassword = "7"
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
