[package]
name = "agentenv"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
description = "Declarative environment manager for AI coding agents"

[dependencies]
agentenv-approvals = { path = "../agentenv-approvals" }
agentenv-core = { path = "../agentenv-core" }
agentenv-credstore = { path = "../agentenv-credstore" }
agentenv-events = { path = "../agentenv-events" }
agentenv-plugin = { path = "../agentenv-plugin" }
agentenv-policy = { path = "../agentenv-policy" }
agentenv-proto = { path = "../agentenv-proto" }
agentenv-tui = { package = "tui", path = "../tui" }
agent-claude = { path = "../drivers/agent-claude" }
agent-codex = { path = "../drivers/agent-codex" }
agent-openclaw = { path = "../drivers/agent-openclaw" }
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
clap.workspace = true
context-filesystem = { path = "../drivers/context-filesystem" }
context-mcp-generic = { path = "../drivers/context-mcp-generic" }
context-none = { path = "../drivers/context-none" }
crossterm.workspace = true
dirs.workspace = true
hex.workspace = true
http-body-util.workspace = true
hyper.workspace = true
inference-anthropic = { path = "../drivers/inference-anthropic" }
inference-ollama = { path = "../drivers/inference-ollama" }
inference-openai = { path = "../drivers/inference-openai" }
inference-passthrough = { path = "../drivers/inference-passthrough" }
rpassword = "7"
sandbox-openshell = { path = "../drivers/sandbox-openshell" }
sandbox-microvm = { path = "../drivers/sandbox-microvm" }
sandbox-remote-ssh = { path = "../drivers/sandbox-remote-ssh" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
time = { workspace = true, features = ["formatting"] }
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
assert_cmd = "=2.0.16"
portable-pty = "0.8"
predicates = "3"
reqwest = { workspace = true, features = ["blocking"] }
tempfile = "=3.16.0"
