[package]
name = "tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
description = "Terminal UI scaffolding for agentenv"

[dependencies]
agentenv-approvals = { path = "../agentenv-approvals" }
ratatui.workspace = true
crossterm.workspace = true
serde.workspace = true
