[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentenv-agent-hermes"
version = "0.1.0"
description = "agentenv AgentDriver adapter for Nous Research Hermes Agent"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.2,<7",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<10",
]

[project.scripts]
agentenv-driver-hermes = "agentenv_agent_hermes.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
