[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentenv-context-nexus"
version = "0.1.0"
description = "agentenv Nexus context subprocess driver"
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
agentenv-driver-nexus = "agentenv_context_nexus.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
