[package]
name = "driver-conformance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
agentenv-core = { path = "../../crates/agentenv-core" }
agentenv-proto = { path = "../../crates/agentenv-proto" }
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt"] }
