[package]
name = "inference-openai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
description = "OpenAI inference driver scaffold for agentenv"

[dependencies]
agentenv-core = { path = "../../agentenv-core" }
agentenv-proto = { path = "../../agentenv-proto" }
async-trait.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
