[package]
name = "sandbox-openshell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
description = "OpenShell sandbox driver scaffold for agentenv"

[features]
integration = []

[dependencies]
agentenv-core = { path = "../../agentenv-core" }
agentenv-events = { path = "../../agentenv-events" }
agentenv-policy = { path = "../../agentenv-policy" }
agentenv-proto = { path = "../../agentenv-proto" }
async-trait.workspace = true
semver = "1"
serde_json.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["formatting"] }
uuid.workspace = true

[dev-dependencies]
driver-conformance = { path = "../../../tests/driver-conformance" }
tokio = { version = "1", features = ["macros", "rt"] }
